Implementa deploy.yml final com permissoes e Node.js 20

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest # Usa a última versão do Ubuntu para rodar o job
+    permissions:
+      contents: write # Permissão essencial para o workflow escrever no repositório (criar gh-pages)
+      pages: write    # Permissão para gerenciar o GitHub Pages
+      id-token: write # Permissão para obter o token de identidade (necessário para o Pages)
 
     steps:
       - name: Checkout Repository # Passo 1: Clona o repositório
@@ -16,7 +20,7 @@ jobs:
       - name: Setup Node.js # Passo 2: Configura o ambiente Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20' # <--- Mude para '20'
+          node-version: '20' # Define a versão do Node.js a ser usada (versão LTS mais recente)
 
       - name: Install Dependencies # Passo 3: Instala as dependências do projeto
         run: npm install
@@ -27,7 +31,7 @@ jobs:
       - name: Deploy to GitHub Pages # Passo 5: Publica o conteúdo da pasta 'dist' no GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }} # Token de autenticação fornecido pelo GitHub
-          publish_dir: ./dist # Define a pasta 'dist' como a fonte para publicação
+          github_token: ${{ secrets.GITHUB_TOKEN }} # Usa o token padrão do GitHub, agora com as permissões corretas
+          publish_dir: ./dist # Define a pasta 'dist' (gerada pelo build) como a fonte para publicação
           publish_branch: gh-pages # Publica em um branch separado 'gh-pages'
           # Opcional: force_orphan: true # Cria um histórico limpo para o branch gh-pages
