--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Vite React App to GitHub Pages
 on:
   push:
     branches:
-      - main # MUITO IMPORTANTE: Altere para 'master' se o seu branch principal for 'master'
+      - main # MUITO IMPORTANTE: Se o seu branch principal no GitHub for 'master', mude esta linha para '- master'
 
 jobs:
   build-and-deploy:
@@ -16,14 +16,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Use a versão do Node.js que você prefere (20 é a recomendada)
-          cache: 'npm' # Habilita cache para npm install (acelera o processo)
+          node-version: '20' # Versão do Node.js
+          cache: 'npm' # Habilita cache para npm install
 
       - name: Install dependencies
         run: npm install
 
       - name: Build React App with Vite
-        run: npm run build # Este comando roda o build do Vite, criando a pasta 'dist'
+        run: npm run build # Comando para construir seu aplicativo Vite
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
