--- a/package.json
+++ b/package.json
@@ -1,39 +1,20 @@
 {
-  "name": "tasknexus-frontend",
-  "version": "0.1.0",
+  "name": "tasknexus-novo",
+  "version": "0.0.0",
   "private": true,
+  "homepage": "https://roger7927.github.io/tasknexus-novo/", // <-- Linha da homepage
+  "type": "module", // <-- ESTA LINHA É CRÍTICA! Deve terminar com VÍRGULA!
+  "scripts": {      // <-- ESTA LINHA TAMBÉM É CRÍTICA!
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    // ...
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    // ...
   }
 }
+
